--- a/Calculator.html
+++ b/Calculator.html
@@ -14,10 +14,10 @@
           <input type="text" name="display" placeholder="0" id="inputBox">
         </div>
         <div >
-          <button class="operator">AC</button>
-          <button class="operator">DEL</button>
-          <button class="operator">%</button>
-          <button class="operator">/</button>
+          <button> class="operator">AC</button>
+          <button>class="operator">DEL</button>
+          <button> class="operator">%</button>
+          <button> class="operator">/</button>
         </div>
         <div>
          <button>7</button>
